# smartswasthya-fresh

./: .dockerignore  .gitattributes  .gitignore  Let’s begin.......txt  README.md  Smart-Suggestor.py  SmartEngine.py  __init__.py  alembic.ini  alembic_runner.py  auto_git_update.py  celery_app.py  celery_beat_schedule.py  celery_worker.py  config.py  correction.py  corrupted_file_restore_plan.py  database.py  diagnose.py  docker-compose.yml  filelist.txt  fix_sequence_fields_20250630_092610.sql  funstruct.py  graph.dot  handler.py  html_refactor.py  main.py  marker_decorators.py  obvious_mapper.py  pyproject.toml  requirements.pkggen.txt  requirements.txt  simulator.py  smartengine_plugins.py  tailwind.config.js  tailwind_optimizer.py  tailwind_usage_analyzer.py  trackedlist.txt
.internal_logs/: trace_runner_summary.txt
abdm/: abha_creation.py  consent_manager.py  phr_gateway.py  sandbox_config.py
alembic_migrations/: env.py  script.py.mako
blueprints/: dev_core.py  partner_routes.py  sync_routes.py  user_routes.py
compatibility/: email_verification.py  moderator.py
dlt_templates/: dlt_templates.py
logic/: admin_trace_logic.py  bloodbank_logic.py  dev_bucket_logic.py  doctor_logic.py  dummy_task.py  email_otp_logic.py  family_logic.py  helper.py  homecare_logic.py  hospital_logic.py  instruction_logic.py  lab_logic.py  scan_logic.py  search_logic.py  sms_otp_logic.py  startup_watcher.py  sync_logic.py  sync_retry_logic.py  task_logic.py  task_runner_logic.py  utils.py
middleware/: token_validator.py
models/: __init__.py  active_token.py  app_update_logs.py  (+62 more)
(+256 files in other folders)
