updated_pyproject = """
[tool.poetry]
name = "smartswasthya"
version = "0.1.0"
description = "Smart Swasthya Seva"
authors = ["Smart Team <support@smartswasthya.in>"]
readme = "README.md"
packages = [{include = "smartswasthya"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
itsdangerous = "^2.2.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
requests = "^2.31.0"
sentry-sdk = "^2.0.1"
redis = "^5.0.4"
celery = "^5.3.6"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
pillow = "^10.3.0"
python-jose = "^3.3.0"
pytz = "^2025.2"
werkzeug = "^3.1.3"
flask = "^2.3.3"
PyJWT = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
"""

# Apply: pyproject.toml मध्ये हे paste कर.